--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-nice-scroll": "^1.0.0",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
     "react-show-more-text": "^1.7.1",
