--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-nice-scroll": "^1.0.0",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
+    "react-search-box": "^3.0.0",
     "react-show-more-text": "^1.7.1",
     "react-simple-star-rating": "^5.1.7",
     "styled-components": "^6.1.8"
