--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-image-upload": "^3.0.1",
     "react-nice-scroll": "^1.0.0",
     "react-router": "^6.22.0",
-    "react-router-dom": "^6.22.0",
-    "react-search-box": "^3.0.0",
+    "react-router-dom": "^6.23.1",
+    "react-search-box": "^2.3.0",
     "react-show-more-text": "^1.7.1",
     "react-simple-star-rating": "^5.1.7",
     "react-svg": "^16.1.33",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "uint8-to-base64": "^0.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
