--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/x-data-grid": "^6.20.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -55,4 +56,3 @@
     "vite": "^5.1.0"
   }
 }
-
